test/corpus/compare.txt
=================================================
basic compare 
=================================================

test:
    cmp r0, 20
    bx lr

------------------------------------------------

(source_file
  (function_definition
    (func_name)
        (simple_statement
            (opcode)
            (register)
            (constant))
        (return_statement
            (branch_opcode)
            (register))))
