test/corpus/function.txt
=================================================
basic addition function
=================================================

test:
    add r0, r0, r1
    bx lr

------------------------------------------------

(source_file
  (function_definition
    (func_name)
        (math_statement
          (opcode)
          (register)
          (register)
          (register))
        (return_statement
          (register))))

=================================================
basic load function
=================================================

test:
    ldr r0, [r0, 0x0] 
    bx lr

------------------------------------------------

(source_file
  (function_definition
    (func_name)
        (load_statement
          (register))
        (return_statement
          (register))))


=================================================
basic function w/ push and branch
=================================================

test:
    push lr
    mov r0, 0
    mov r0, 0x1
    bl MemoryAlloc
    bx lr

------------------------------------------------

(source_file
  (function_definition
    (func_name)
        (push_statement)
        (simple_statement
          (opcode)
          (register)
          (constant))
        (simple_statement
          (opcode)
          (register)
          (constant))
        (branch_statement
            (label))
        (return_statement
          (register))))
